--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,7 @@
 }
 
 body {
+	position: relative;
 	font-family: 'RedHatText', sans-serif;
 	background-color: rgb(49, 49, 49);
 	display: flex;
@@ -50,7 +51,7 @@ body {
 
 .page-wrapper {
 	display: grid;
-	grid-template-columns: 1fr 0.5fr;
+	grid-template-columns: 1fr 0.4fr;
 	grid-template-rows: 1fr;
 	grid-column-gap: 0px;
 	grid-row-gap: 0px;
@@ -62,19 +63,27 @@ body {
 
 .products-area,
 .cart-area {
-	height: 100vh;
-	background-color: aliceblue;
-}
-
-.cart-area {
-	/* padding: 0px 150px 0px 50px; */
-	background-color: aqua;
+	position: relative;
+	height: 100%;
+	background-color: #fcf8f5;
 }
 
 .cart-card {
+	display: grid;
+	grid-template-columns: 1fr;
+	grid-template-rows: 100px auto;
+	grid-column-gap: 0px;
+	grid-row-gap: 0px;
 	width: 100%;
 	height: 500px;
-	background-color: rgb(66, 78, 78);
+	/* background-color: rgb(255, 255, 255); */
+    background-color: rgb(82, 82, 82);
+	color: rgb(0, 0, 0);
+	padding: 25px;
 }
 
-
+.cart-name {
+	font-size: 28px;
+	font-weight: 600;
+	color: hsl(14, 65%, 48%);
+}
